Fix Vertical white space on agency blocks

--- a/web/app/themes/justicejobs/src/scss/layout/_agency.scss
+++ b/web/app/themes/justicejobs/src/scss/layout/_agency.scss
@@ -16,14 +16,14 @@
             display: flex;
             flex-direction: column;
 
-            @include respond-to(md) {
+            @include respond-to(lg) {
                 flex-direction: row;
                 flex-wrap: wrap;
                 align-items: flex-start;
             }
 
             .btn-big {
-                @include respond-to(md) {
+                @include respond-to(lg) {
                     margin-top: 80px;
                 }
             }
